Removed limit on number of active player bases
Squashed commit of the following:

commit 1d47724c0e3480b6c0c4fb55195573aa0ef1f078
Author: fenyo1 <fenyo.pub+github@gmail.com>
Date:   Sun Mar 23 13:25:47 2014 +0100

    Fixing the saving of the selected base.

commit 34d8edefaf6c3182b57ce575bad15c9599d6f55f
Author: fenyo1 <fenyo.pub+github@gmail.com>
Date:   Wed Jan 1 01:24:50 2014 +0100

    PsiTrainingState is now scrollable.
    (if the player has more than 8 bases with PsiLabs)

commit 933ec6506d32a4a5ca12f9fd8a25bacd1cbf6180
Author: fenyo1 <fenyo.pub+github@gmail.com>
Date:   Mon Dec 30 22:22:27 2013 +0100

    New Feature: Unlimited bases
    Default: OFF
    You can build any number of bases, even more than 8.

commit 31b55bb99c64f3032a3c03f21d28e928b4a0124f
Author: fenyo1 <fenyo.pub+github@gmail.com>
Date:   Mon Dec 30 02:07:42 2013 +0100

    Some code related to MiniBaseView is refactored.

--- a/bin/standard/xcom1/Language/en-US.yml
+++ b/bin/standard/xcom1/Language/en-US.yml
@@ -1029,6 +1029,8 @@ en-US:
   STR_GROUND: "GROUND"
   STR_LIVING_QUARTERS_PLURAL: "Living Quarters"
   STR_LIST_ITEM: "ITEM"
+  STR_UNLIMITEDBASES: "Unlimited bases"
+  STR_UNLIMITEDBASES_DESC: "You can build any number of bases, even more than 8. Of course the aliens are also able to build more than 8, if this is turned on. The first and the last item of the mini base view are auto-scrolling the view."
   STR_PERSONAL_ARMOR_UFOPEDIA: "Using the newly discovered Alien Alloys, this new armor gives our men a fighting chance against the alien threat."
   STR_POWER_SUIT_UFOPEDIA: "A powerful new protection for soldiers, this armor is powered by an Elerium energy source and greatly amplifies the speed and strength of the wearer, it offers the best protection yet for combat troops."
   STR_FLYING_SUIT_UFOPEDIA: "An enhanced version of the Power Suit, incorporating alien anti-gravity navigation technology to allow full freedom of movement across the battlefield."
